--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -11,6 +11,21 @@ body:
         
         For general questions or discussions, please use the 
         [Discussions](https://github.com/GoogleCloudPlatform/cloud-foundation-fabric/discussions) tab
+        
+  - type: dropdown
+    id: affected-components
+    attributes:
+      label: Affected components
+      description: What is this bug about?
+      options:
+        - Fabric modules
+        - FAST
+        - Blueprints
+        - Other
+    validations:
+      required: true
+
+  
   - type: textarea
     id: the-problem
     attributes:
@@ -21,6 +36,7 @@ body:
         any error messages you encountered.
     validations:
       required: true
+      
   - type: input
     id: version
     attributes:
@@ -29,6 +45,7 @@ body:
         Output from `git rev-parse --short HEAD`
     validations:
       required: true
+      
   - type: input
     id: tf-version
     attributes:
@@ -59,7 +76,7 @@ body:
   - type: textarea
     id: actual-result
     attributes:
-      label: Expected behavior
+      label: Actual behavior
       description:
         A clear and concise description of what actually happened.      
         Include any relevant Terraform output and/or error messages
